# cosmic-ext-applet-playerctl

./: Cargo.toml  justfile
data/: io.github.elevenhsoft.CosmicExtAppletPlayerctl.desktop
src/: main.rs  player.rs  window.rs
