[package]
name = "cosmic-ext-applet-playerctl"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
mpris2-zbus = { git = "https://github.com/pop-os/dbus-settings-bindings" }
zbus = { version = "4.2.1", default-features = false, features = ["tokio"] }
urlencoding = "2.1.3"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = [
  "applet",
  "applet-token",
  "tokio",
  "wayland",
  "desktop",
  "dbus-config",
]
